--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,27 +1,36 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" href="/favicon.ico"><title>vue-frontend</title>
+    <script defer="defer" src="/js/chunk-vendors.857a3aa4.js"></script>
+    <script defer="defer" src="/js/app.fc5f0f61.js"></script>
+    <link href="/css/app.d48e413a.css" rel="stylesheet">
 </head>
-<body> <ul>
+<body>
+<ul>
+    <li>vue page<ul>
+        <li><a href="#app">vue page</a></li> </ul>
+    </li>
     <li>로그 출력 <ul>
         <li><a href="/log-test">로그 테스트</a></li> </ul>
     </li>
     <!-- -->
     <li>요청 매핑
-    <ul>
-        <li><a href="/hello-basic">hello-basic</a></li>
-        <li><a href="/mapping-get-v1">HTTP 메서드 매핑</a></li>
-        <li><a href="/mapping-get-v2">HTTP 메서드 매핑 축약</a></li>
-        <li><a href="/mapping/userA">경로 변수</a></li>
-        <li><a href="/mapping/users/userA/orders/100">경로 변수 다중</a></li>
-        <li><a href="/mapping-param?mode=debug">특정 파라미터 조건 매핑</a></li>
-        <li><a href="/mapping-header">특정 헤더 조건 매핑(POST MAN 필요)</a></li>
-        <li><a href="/mapping-consume">미디어 타입 조건 매핑 Content-Type(POSTMAN 필요)</a></li>
-        <li><a href="/mapping-produce">미디어 타입 조건 매핑 Accept(POST MAN 필요)</a></li>
-    </ul>
-</li>
+        <ul>
+            <li><a href="/hello-basic">hello-basic</a></li>
+            <li><a href="/mapping-get-v1">HTTP 메서드 매핑</a></li>
+            <li><a href="/mapping-get-v2">HTTP 메서드 매핑 축약</a></li>
+            <li><a href="/mapping/userA">경로 변수</a></li>
+            <li><a href="/mapping/users/userA/orders/100">경로 변수 다중</a></li>
+            <li><a href="/mapping-param?mode=debug">특정 파라미터 조건 매핑</a></li>
+            <li><a href="/mapping-header">특정 헤더 조건 매핑(POST MAN 필요)</a></li>
+            <li><a href="/mapping-consume">미디어 타입 조건 매핑 Content-Type(POSTMAN 필요)</a></li>
+            <li><a href="/mapping-produce">미디어 타입 조건 매핑 Accept(POST MAN 필요)</a></li>
+        </ul>
+    </li>
     <li>요청 매핑 - API 예시
         <ul>
             <li>POST MAN 필요</li>
@@ -43,27 +52,33 @@
             <li><a href="/model-attribute-v2?username=hello&age=20">요청 파라미터 @ModelAttribute v2</a></li>
         </ul>
     </li>
-<li>HTTP 요청 메시지
-    <ul>
-        <li>POST MAN</li>
-    </ul>
-</li>
-<li>HTTP 응답 - 정적 리소스, 뷰 템플릿
-    <ul>
-        <li><a href="/basic/hello-form.html">정적 리소스</a></li>
-        <li><a href="/response-view-v1">뷰 템플릿 v1</a></li>
-        <li><a href="/response-view-v2">뷰 템플릿 v2</a></li>
-    </ul>
-</li>
-<li>HTTP 응답 - HTTP API, 메시지 바디에 직접 입력
-    <ul>
-    <li><a href="/response-body-string-v1">HTTP API String v1</a></li>
-    <li><a href="/response-body-string-v2">HTTP API String v2</a></li>
-    <li><a href="/response-body-string-v3">HTTP API String v3</a></li>
-    <li><a href="/response-body-json-v1">HTTP API Json v1</a></li>
-    <li><a href="/response-body-json-v2">HTTP API Json v2</a></li>
-    </ul>
-</li>
+    <li>HTTP 요청 메시지
+        <ul>
+            <li>POST MAN</li>
+        </ul>
+    </li>
+    <li>HTTP 응답 - 정적 리소스, 뷰 템플릿
+        <ul>
+            <li><a href="/basic/hello-form.html">정적 리소스</a></li>
+            <li><a href="/response-view-v1">뷰 템플릿 v1</a></li>
+            <li><a href="/response-view-v2">뷰 템플릿 v2</a></li>
+        </ul>
+    </li>
+    <li>HTTP 응답 - HTTP API, 메시지 바디에 직접 입력
+        <ul>
+            <li><a href="/response-body-string-v1">HTTP API String v1</a></li>
+            <li><a href="/response-body-string-v2">HTTP API String v2</a></li>
+            <li><a href="/response-body-string-v3">HTTP API String v3</a></li>
+            <li><a href="/response-body-json-v1">HTTP API Json v1</a></li>
+            <li><a href="/response-body-json-v2">HTTP API Json v2</a></li>
+        </ul>
+    </li>
 </ul>
+<noscript>
+    <strong>We're sorry but vue-frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app">
+
+</div>
 </body>
 </html>
